<resources>
    <string name="app_name">alradio</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Menu texts-->
    <string name="menu_home">Inicio</string>
    <string name="menu_my_lists">Mis Listas</string>
    <string name="menu_reproducer">Reproductor</string>
    <string name="menu_exit">Salir</string>
    <string name="menu_information">Información</string>
    <string name="menu_about">Acerca de</string>
    <string name ="menu_header_imageview"/>

    <!--Search bar-->
    <string name="action_search">Buscar</string>
    <string name="search">Buscar Radio</string>
    <string name="submitted">submitted</string>

    <!--Home list elements-->
    <string name="home_list_element_radio_name">Nombre de la emisora</string>
    <string name="home_list_element_imageview"/>
</resources>
