<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_mis_listas"
            android:title="@string/menu_my_lists" />
        <item
            android:id="@+id/nav_reproductor"
            android:title="@string/menu_reproducer" />
        <item
            android:id="@+id/nav_salir"
            android:title="@string/menu_exit" />
    </group>

    <item android:title="@string/menu_information">
        <menu>
            <item
                android:id="@+id/nav_acerca_de"
                android:title="@string/menu_about" />

        </menu>
    </item>

</menu>
